--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "name": "Timestamp",
   "version": 2,
   "build": {
-    "src": "/index.js",
+    "src": "src/index.js",
     "use": "@vercel/node"
   },
   "public": true,
