--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-  "name": "Timestamp",
   "version": 2,
-  "build": {
-    "src": "src/index.js",
-    "use": "@vercel/node"
-  },
+  "builds": [
+    {
+      "src": "/index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "public": true,
   "routes": [
     {
