--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,8 @@
     {
       "src": "/(.*)",
       "dest": "/"
-    }
+    },
+    { "src": "/css/(.*)", "dest": "/public/css/$1" },
+    { "src": "/images/(.*)", "dest": "/public/images/$1" }
   ]
 }
