--- a/vercel.json
+++ b/vercel.json
@@ -7,11 +7,11 @@
     }
   ],
   "routes": [
+    { "src": "/css/(.*)", "dest": "/public/css/$1" },
+    { "src": "/images/(.*)", "dest": "/public/images/$1" },
     {
       "src": "/(.*)",
       "dest": "/"
-    },
-    { "src": "/css/(.*)", "dest": "/public/css/$1" },
-    { "src": "/images/(.*)", "dest": "/public/images/$1" }
+    }
   ]
 }
