--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "routes": [
-    { "src": "/css/(.*)", "dest": "/public/css/$1" },
+    { "src": "/public/css/(.*)", "dest": "/public/css/$1" },
     { "src": "/images/(.*)", "dest": "/public/images/$1" },
     {
       "src": "/(.*)",
