--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,7 @@
     }
   ],
   "routes": [
-    { "src": "/public/css/(.*)", "dest": "/public/css/$1" },
-    { "src": "/images/(.*)", "dest": "/public/images/$1" },
+    { "src": "/public/(.*)", "dest": "/public/$1" },
     {
       "src": "/(.*)",
       "dest": "/"
